--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
   border: 1px solid #036e6e;
   height: clamp(50px, 10%, 600px);
   padding-left: 2em;
-  overflow: hidden;
 }
 
 .header__title {
@@ -34,7 +33,7 @@ body {
   display: grid;
   grid-template-columns: repeat(6, 400px);
   gap: 1em;
-  height: 90%;
+  height: calc(100% - clamp(50px, 10%, 600px));
   padding: 1em;
   overflow-x: auto;
 }
